# ParallelComputing

./: README.md
CTestSubmit/: CMakeLists.txt  TimeIt.cpp
CTest_1/: CMakeLists.txt  MPITimeIt.cpp  TimeIt.cpp  mympiapp.ctest
CTest_1/ctestbuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
CTest_1/ctestbuild/Testing/Temporary/: CTestCostData.txt
Parallelheaders/: malloc2D.cpp  malloc2D.h
memorycheck/: memory_check_example  memory_check_example.cpp
